modified:   ../config/dev.conf modified:   ../config/prod.conf modified:   ../.gitignore

--- a/config/dev.conf
+++ b/config/dev.conf
@@ -5,8 +5,11 @@
 		"user_agent"		: "skrraper script"
 	},
 	"retry"		:	{
-		"retry_file"		: "retry/retry.log",
-		"retry_dir"			: "retry"
+		"retry_file"		: "../retry/retry.log",
+		"retry_dir"			: "../retry"
+	},
+	"song"		:	{
+		"song_dir"			: "../song"
 	},
 	"skrraper"	:	{
 		"reddit_url"		: "https://www.reddit.com/r/hiphopheads/search",
