Added database tables for songs that were downloaded and songs that were not downloaded in order to retry them at a later time.

--- a/config/dev.conf
+++ b/config/dev.conf
@@ -11,6 +11,12 @@
 	"song"		:	{
 		"song_dir"			: "../song"
 	},
+	"database"	:	{
+		"db_dir"			: "../db",
+		"db_name"			: "skrraper",
+		"db_song_table"		: "songs",
+		"db_retry_table"	: "retry"
+	},
 	"skrraper"	:	{
 		"reddit_url"		: "https://www.reddit.com/r/hiphopheads/search",
 		"reddit_payload"	: "{'q' : 'FRESH', 'restrict_sr' : 'on', 'sort' : 'top', 't' : 'all'}"
